package ArkhitekturaPO.Practocal.Practical_1.weapons;

/*
Интерфейс щита(блокирования урона)
 */
public interface Protection {

    int blockDamage(); // Поле защита щита;
}
