package ArkhitekturaPO.Practocal.Practical_1.weapons;

/*
Интерфейс оружия.
 */
public interface Weapon { // создаем интерфейс оружия;
    int damage(); // поле урон от оружия;

}
