package ArkhitekturaPO.Practocal.Practical_1.weapons.meleeWeapon;

/*
Интерфейс оружия ближнего боя.
 */


import ArkhitekturaPO.Practocal.Practical_1.weapons.Weapon;

public interface Melee extends Weapon { // Интерфейс оружия ближнего боя;
}
