package ArkhitekturaPO.Practocal.Practical_1.weapons.rangedWeapon;

/*
Интерфейс дальнобойного оружия.
 */


import ArkhitekturaPO.Practocal.Practical_1.weapons.Weapon;

public interface Ranged extends Weapon { // Интерфейс оружия дальнего боя;
    int distance(); // дистанция стрельбы;

}
