package ArkhitekturaPO.Practocal.Practical_1.weapons.shields;

/*
Интерфейс щита
 */


import ArkhitekturaPO.Practocal.Practical_1.weapons.Protection;

public interface Def extends Protection {
}
